--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <h1>Ini adalah judul</h1>
 <table border="1" width="50%">
-<tr>
+<tr style="background-color: antiquewhite; color: black;" >
     <th>
         number
     </th>
@@ -24,7 +25,7 @@
         city
     </th>
 </tr>
-<tr>
+<tr class="baris1">
     <td>1</td>
     <td>Fulan</td>
     <td>Jln. Pemekaran</td>
